fix(Testimonials): actually improve look on iPhones

--- a/src/scss/module/_testimonials.scss
+++ b/src/scss/module/_testimonials.scss
@@ -11,7 +11,10 @@
   }
   article {
     position: relative;
-    height: 500px;
+    height: 300px;
+    @include media-breakpoint-up(md) {
+      height: 450px;
+    }
     overflow: hidden;
   }
   section {
@@ -24,11 +27,11 @@
     border-radius: 3px;
     blockquote {
       width: 100%;
-      line-height: 95%;
       padding: ($grid-gutter-width / 2) 0 $grid-gutter-width $grid-gutter-width;
       position: relative;
       clear: both;
       @include section-text(0.5);
+      line-height: 95%;
       @include media-breakpoint-up(md) {
         padding-left: $grid-gutter-width * 1.5;
         width: 60%;
@@ -48,8 +51,8 @@
         }
       }
       &.long {
-        @include section-text(0.4);
-        font-size: 100%;
+        @include section-text(0.45);
+        line-height: 90%;
       }
     }
 
@@ -76,19 +79,6 @@
         left: -2rem;
       }
     }
-    blockquote.long {
-      *[role=note] {
-        @include media-breakpoint-up(md) {
-          font-size: 60% * 150 / 110;
-        }
-        @include media-breakpoint-up(lg) {
-          font-size: 60% * 175 / 120;
-        }
-        @include media-breakpoint-up(xl) {
-          font-size: 60% * 200 / 140;
-        }
-      }
-    }
 
     img {
       width: auto;
@@ -98,6 +88,9 @@
         display: inline-block;
       }
       @include media-breakpoint-up(md) {
+        max-height: 75%;
+      }
+      @include media-breakpoint-up(lg) {
         max-height: 100%;
       }
       position: absolute;
